--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>MUNDO OBRA</h1>
     <h2>Materiales que duran, obras que perduran</h2>
+
+<script src="./main.js"></script>
 </body>
 </html>
