--- a/index.html
+++ b/index.html
@@ -5,16 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Materiales para la construccion</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@400..800&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>MUNDO OBRA</h1>
-    <h2>Materiales que duran, obras que perduran</h2>
-
-    <p>
-      Bienvenido a nuestro cotizador online de materiales para construcción.
+    <!-- Encabezado -->
+    <header class="header">
+      <h1>MUNDO OBRA</h1>
+      <h2>Materiales que duran, obras que perduran</h2>
+      <nav>
+        <ul class="menu">
+          <li><a href="./index.html">Inicio</a></li>
+          <li><a href="./html/mayorista.html">Mayorista</a></li>
+          <li><a href="./html/Formulariocompra.html">Carrito</a></li>
+        </ul>
+      </nav>
+    </header>
+    <p class="bienvenida">
+      Bienvenido a nuestro cotizador online de materiales para construcción
     </p>
-    <button onclick="simuladorCorralon()">Iniciar cotización</button>
+    <main>
+      <section id="catalogo">
+        <h2>Catálogo</h2>
+        <div id="contenedor-productos" class="catalogo-grid"></div>
+        </ul>
+        
+      </section>
 
-    <script src="./main.js"></script>
+      <!-- Carrito en index-->
+       
+    <button id="btn-toggle-carrito" aria-label="Mostrar carrito">🛒 Carrito</button>
+      <ul id="contenedor-carrito"></ul>
+      <p class="total-carrito">Total: $<span id="total-carrito">0</span></p>
+      <button class="btn-finalizar" onclick="window.location.href='./html/Formulariocompra.html'">
+        Finalizar compra
+      </button>
+   
+  </main>
+
+    <footer>
+      <p>© 2025 Mundo Obra</p>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="./JS/catalogo.js"></script>
+    <script src="./JS/index.js"></script>
+    <script src="./JS/formulario.js"></script>
   </body>
 </html>
