--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </footer>
 
     <!-- Scripts -->
-    
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./JS/index.js"></script>
     <script src="./JS/formulario.js"></script>
   </body>
