--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
     <!-- Scripts -->
     
     <script src="./JS/index.js"></script>
-    <script src="./JS/formulario.js"></script>
+    <script src="./JS/formulariocompra.js"></script>
   </body>
 </html>
