--- a/html/Formulariocompra.html
+++ b/html/Formulariocompra.html
@@ -62,6 +62,7 @@
       <p>© 2025 Mundo Obra</p>
     </footer>
 
-    <script src="../JS/formulariocompra.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../JS/formulariocompra.js" defer></script>
   </body>
 </html>
