agregado de libreria en jsmayorista

--- a/html/mayorista.html
+++ b/html/mayorista.html
@@ -55,18 +55,6 @@
 
         <button type="submit">Solicitar lista</button>
       </form>
-
-      <div
-        id="mensaje-confirmacion"
-        class="mensaje-confirmacion"
-        style="display: none"
-      >
-        <h2>Tu solicitud fue enviada</h2>
-        <p>
-          Un agente de atencion al cliente se contactara contigo al email
-          informado y enviaremos nuestra lista de precios completa
-        </p>
-      </div>
     </main>
 
     <footer>
@@ -74,6 +62,8 @@
     </footer>
 
     <!-- JavaScript separado -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <script src="../JS/mayorista.js"></script>
   </body>
 </html>
